# project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DisplayImage  Makefile  README.md  cmake_install.cmake  fps.cpp  makefile  mylib-unit-tests  proj_test_include-b858cb2.cmake  qwe.cpp  testoutput  tests.cpp
.cache/clangd/index/: doctest.cpp.C812ECD20C34811F.idx  doctest.h.89022F4BACFB2621.idx  fps.cpp.BC0532C1495F06CD.idx  tests.cpp.EA36023DF3BAD65D.idx
